...
    }
    refetch();
  }

  return (
    <PickerProvider>
      <View style={s.container} testID="home.screen">
        <StatusBar style={resolved === "dark" ? "light" : "dark"} />

        <MapErrorBoundary>
          <MapView
            ref={mapRef}
            testID="home.map"
            style={StyleSheet.absoluteFillObject}
            provider={PROVIDER_GOOGLE}
            initialRegion={region}
            onRegionChangeComplete={handleRegionChangeComplete}
            showsUserLocation
            showsMyLocationButton={false}
...
